Si, G en la regla de Barrow tiene que ser continua, y ademas derivable, que es mas fuerte, en el intervalo. Sino no podes pedir que su derivada sea igual a f.

--- a/Analisis.tex
+++ b/Analisis.tex
@@ -1092,7 +1092,7 @@
 \end{teo}
 
 \begin{teo}[Regla de Barrow]
-	Sea $f:\R\to\R$ una función continua y sea $G:[a,b]\to\R$ continua (¿¿¿Posta continua??? Para mi $G$ no tiene que ser continua) tal que $G'(x) = f(x)$ para todo $x\in[a,b]$. Entonces
+	Sea $f:\R\to\R$ una función continua y sea $G:[a,b]\to\R$ continua tal que $G'(x) = f(x)$ para todo $x\in[a,b]$. Entonces
 	\begin{center}
 		$\displaystyle G(b)-G(a) = \integral{a}{b}{f(x)}{x}$
 	\end{center}
