En equivalencia de supremo, s - epsilon no es cota, no s - e.

--- a/Analisis.tex
+++ b/Analisis.tex
@@ -116,7 +116,7 @@
 	\end{itemize}
 \begin{proof}
 	~\newline
-	$\Rightarrow)$ El primer ítem es trivial. Por otro lado, dado $\e > 0$, se tienen $s - \e < s$, por lo que $s - e$ no es cota superior de $A$. O sea, existe $a \in A$ tal que $s-\e<a$, lo que prueba el segundo ítem.\newline
+	$\Rightarrow)$ El primer ítem es trivial. Por otro lado, dado $\e > 0$, se tienen $s - \e < s$, por lo que $s - \e$ no es cota superior de $A$. O sea, existe $a \in A$ tal que $s-\e<a$, lo que prueba el segundo ítem.\newline
 	~\newline
 	$\Leftarrow)$ Es necesario probar que $s$ es la cota superior más chica. Sea $s'$ una cota superior más chica que $s$ (O sea $s' < s$) y sea $\e=s-s'>0$. Esto es absurdo porque contradice la hipótesis de que para cualquier $\e>0$, existe $a\in A$ tal que $s-\e<a$.
 \end{proof}
