En la proposicion 3, la sucesion que tiende al supremo es creciente, no decreciente.

--- a/Analisis.tex
+++ b/Analisis.tex
@@ -125,7 +125,7 @@
 \newpage
 \section{Sucesiones}
 \begin{prop}
-	Si $s = sup\ A$ entonces existe una sucesión creciente ${a_n} \in A$ tal que $a_n \rightarrow s$. Si $s \not\in A$, se puede elegir $a_n$ estrictamente decreciente.
+	Si $s = sup\ A$ entonces existe una sucesión creciente ${a_n} \in A$ tal que $a_n \rightarrow s$. Si $s \not\in A$, se puede elegir $a_n$ estrictamente creciente.
 \begin{proof}
 	Si $s \in A$, basta tomar $a_n = s$ la sucesión constante (que, por definición es creciente). Si no, tomamos algún elemento $\overline{a_1} \in A$, y ponemos $a_1 := \overline{a_1}$. 
 	
