Teorema de Lagrange: f:A->Reales, no f:A->R.

--- a/Analisis.tex
+++ b/Analisis.tex
@@ -430,7 +430,7 @@
 ~\newline
 
 \begin{teo}[Lagrange en $\R^n$]
-	Sea $f:A\subseteq \R^n\to R$ diferenciable con $A$ \textbf{convexo} (o sea, para todo par de puntos del conjunto el segmento que los une está totalmente contenido en el conjunto). Entonces, para todo $Q,R\in A$, existe $P_0$ en el segmento que une $Q$ con $R$ tal que
+	Sea $f:A\subseteq \R^n\to \R$ diferenciable con $A$ \textbf{convexo} (o sea, para todo par de puntos del conjunto el segmento que los une está totalmente contenido en el conjunto). Entonces, para todo $Q,R\in A$, existe $P_0$ en el segmento que une $Q$ con $R$ tal que
 	\begin{center}
 		$f(Q)-f(R) = \ip{D_f(P_0)}{Q-R}$
 	\end{center}
