--- a/Analisis.tex
+++ b/Analisis.tex
@@ -920,7 +920,7 @@
 		\end{itemize}
 		En base a la nomenclatura definida hasta ahora, observemos que 
 		\begin{center}
-			$M_i - m_i = $ sup$\{h(x):x\in\Delta_i\}-$ inf$\{h(y):y\in\Delta_i\} = sum\{h(x)-h(y):x,y\in\Delta_i\}$
+			$M_i - m_i = $ sup$\{h(x):x\in\Delta_i\}-$ inf$\{h(y):y\in\Delta_i\} = $ sup$\{h(x)-h(y):x,y\in\Delta_i\}$
 		\end{center}
 		Esto es porque en cada intervalo $\Delta_i$ la diferencia entre el valor más grande y el más chico de $h$ coincide con la diferencia más grande de valores de $h$.
 		Análogamente,
